Fix silly alignment

--- a/app/assets/stylesheets/_site_wide.css.sass
+++ b/app/assets/stylesheets/_site_wide.css.sass
@@ -151,7 +151,6 @@ table.no-horizontal-dividers
 .customer-badge
   max-width: 100%
   white-space: nowrap
-  overflow: hidden
   text-overflow: ellipsis
   display: inline-block
   color: #333
