--- a/app/assets/stylesheets/distributor/_deliveries.css.sass
+++ b/app/assets/stylesheets/distributor/_deliveries.css.sass
@@ -128,15 +128,12 @@ $navigation-month: #5c5c5c
         -webkit-mask-image: -webkit-gradient(linear, center top, right top, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
       .customer-holder
         display: inline-block
-        .customer-badge
-          margin: 4px 0
       .tag-links
         display: inline-block
-        overflow: hidden
         &:hover
           background-color: $white
           position: absolute
-          margin: 1px 4px
+          margin: 6px 4px
           padding-right: 2px
       .paid-label
         visibility: hidden
@@ -151,9 +148,9 @@ $navigation-month: #5c5c5c
         text-align: center
         color: $black
         padding: 3px 3px 2px 3px
-        margin: 3px 0px 3px 1px
+        margin: 6px 0
         i
-          margin-top: 0px
+          margin-top: 0
       .dso-number
         font-weight: bold
         +border-right-radius(0px)
